adding settings JWT

--- a/Application-Chat/appsettings.json
+++ b/Application-Chat/appsettings.json
@@ -9,5 +9,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "Campeche-2024-20-01-proyecto-university-chat-kevinchanguzman-290901",
+    "ValidateIssuer": false,
+    "ValidIssuer": "https://localhost:7253",
+    "ValidateAudience": false,
+    "ValidAudience": "https://localhost:7253",
+    "RequiredExpirationTime": true,
+    "ValidateLifetime": true
+  }
 }
