--- a/Application-Chat/appsettings.json
+++ b/Application-Chat/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ChatStoreDatabase": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://kevinAdmin:z2H3yRrCxWGUtM9a@firstcluster.uzi3h4p.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "ChatDB"
   },
   "Logging": {
@@ -9,5 +9,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "Campeche-2024-20-01-proyecto-university-chat-kevinchanguzman-290901",
+    "ValidateIssuer": false,
+    "ValidIssuer": "https://localhost:7253",
+    "ValidateAudience": false,
+    "ValidAudience": "https://localhost:7253",
+    "RequiredExpirationTime": true,
+    "ValidateLifetime": true
+  }
 }
