--- a/Application-Chat/appsettings.json
+++ b/Application-Chat/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ChatStoreDatabase": {
-    "ConnectionString": "mongodb+srv://kevinAdmin:z2H3yRrCxWGUtM9a@firstcluster.uzi3h4p.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ChatDB"
   },
   "Logging": {
